# sandbox

./: .gitignore  .project  .travis.yml  Cargo.toml  README.md  TODO.wofl  clean  delete_target_dirs  find_insecure_shebangs  go  push  replaceauthor  show_broken_symlinks  show_ignored
01_rustlearnage/: prime_idea
01_rustlearnage/implicit_copy/: Cargo.toml
02_reflo/book/l_19_8_two/: Cargo.toml  c
02_reflo/book/l_19_8_two/src/: lib.rs
02_reflo/helper_scripts/: e  elib
03_phiRhall/droptest/: Cargo.toml
03_phiRhall/two/: go
03_plaincatchup/: todo
04_phiRhall/: .gitignore
04_phiRhall/one/: Cargo.toml
04_phiRhall/three/: Cargo.toml
NLL/nll_equiv/: go2  go3
async-await-echo/: Cargo.toml
async-await-echo/src/: main.rs
async_futures_try_join/src/: main.rs
awk/doublefree/: 0100_double_free_fix.patch  0110_double_free_fix_2.patch  afterthesimplefix_newbug.awk  b.awk  (+1 more)
backtrace_example/: 2  Cargo.toml  go
bad_Z/: Cargo.toml  go2  go2_showscorrect  go3_showsfail
bad_Z/home/user/.cargo/: rme.txt
bad_Z/src/: main.rs
bash/: execc.bash  trap2.bash
book/l_20_1_hello/: Cargo.toml  go_feature_https
book/l_20_1_hello/src/: lib.rs
built_example/: Cargo.toml  build.rs  rme.txt
c/dos/: c  (+1 more)
collision_and_cargo_features_test/: Cargo.toml  go_nofeatures_shouldfail  go_rand  go_rand_num  go_uuid
compiletime_env/: Cargo.toml
coredump/: a.c  a.out
gdb/: print_stacktrace.c
getuniqid3/: Cargo.toml  go_nodefault  go_nodefault_shouldfail
getuniqid3/src/: main.rs
graceful_example/: Cargo.toml  TODO
helper_scripts/: c  e  eb  elib  et  go  travis_script.sh
implied_copy2/: Cargo.toml
insanity/: Cargo.toml
lazystatique_infinite_recursion/: Cargo.toml
macra/: Cargo.toml
macra_exe/: Cargo.toml
macraa/: elib  golib
magic_squares/: Cargo.toml
makepkg/: source_fail
montyhall/: Cargo.toml
mount/: go
no_implicit_prelude/: Cargo.toml
others/sighooksample1/: Cargo.toml
others/sighooksample1/src/: main.rs
overflow_at_runtime/: Cargo.toml
passcode_riddle/: Cargo.toml
patch2_testing/: .gitignore  go  main.c  main.c.upstream
patch_fail/: rme.txt
recompile_self/: Cargo.toml  MAKEhardlink2exe  TODO  build.rs  eb  go  run_exe  run_exe_debug  run_exe_release  runhardlinkedone  test  touch_source
recompile_self/1del.outdated/: .gitignore  Cargo.toml  test_build_date
recompile_self/src/: main.rs
rust/: .gitignore  del_rustc_ices
rust/01_rustlearnage/built_example/: .gitignore  Cargo.toml  a.patch  build.rs  go2  pull_deps  rme.txt
rust/01_rustlearnage/built_example/builty/src/: lib.rs
rust/01_rustlearnage/built_example2/binprog/: .gitignore  Cargo.toml  a.patch  build.rs  g  pull_deps  rme.txt
rust/01_rustlearnage/recompile_self/1del.outdated/: Cargo.toml  MAKEhardlink2exe  build.rs  eb  go  run_with_debug_logs
rust/01_rustlearnage/recompile_self/1del.outdated/src/: main.rs
rust/02_reflo/cli-wg/grrs/: Cargo.toml  el  et  rme.txt
rust/02_reflo/cli-wg/grrs/src/: lib.rs  main.rs
rust/02_reflo/cli-wg/grrs/tests/: cli.rs
rust/02_reflo/others/sighooksample1/: Cargo.toml  go_100%_cpuusage
rust/03_plaincatchup/async_futures_try_join/: Cargo.toml
rust/03_plaincatchup/async_futures_try_join/src/: main.rs
rust/03_plaincatchup/bad_Z/: Cargo.toml  go2_showscorrect  go4_unfail
rust/03_plaincatchup/bad_Z/.cargo/: config
rust/03_plaincatchup/bad_Z/home/user/.cargo/: config
rust/03_plaincatchup/bad_Z/src/: main.rs
rust/04_phiRhall/three/: Cargo.toml
rust/04_phiRhall/three/src/: main.rs
rust/05_sandbox/abort/abort_hook/: Cargo.toml  build.rs  d  eb  g2  gmy  todo.txt
rust/05_sandbox/abort/abort_hook/src/: lib.rs  main.rs
rust/05_sandbox/atomic/cache_incoherence2/: Cargo.toml  RME.txt  build  build_nixos_faster  qemu_stuff  rme2.txt  runner  runqemu
rust/05_sandbox/atomic/cache_incoherence2/.cargo/: config
rust/05_sandbox/atomic/cache_incoherence2/src/: main.rs
rust/05_sandbox/buildrs2/feature_means_all/: Cargo.toml  build.rs  go_fail  go_ok  rme.txt
rust/05_sandbox/cursive/cursive_nul_in_text/: Cargo.toml  e  g  ideal.patch
rust/05_sandbox/cursive/cursive_nul_in_text/src/: main.rs
rust/05_sandbox/dbus/custom_dbus_polkitd/: Cargo.toml  custom_dbus_polkitd.conf  inst  rme.txt
rust/05_sandbox/dbus/custom_dbus_polkitd/root_drive/etc/dbus-1/system.d/: custom_dbus_polkitd.conf
rust/05_sandbox/dbus/custom_dbus_polkitd/root_drive/etc/local.d/: custom_dbus_polkitd.start
rust/05_sandbox/dbus/custom_dbus_polkitd/root_drive/etc/sudoers.d/: 100-reboot  110-shutdown
rust/05_sandbox/dbus/custom_dbus_polkitd/src/: main.rs
rust/05_sandbox/diff/both_as_diff_patch_replacements/: Cargo.toml  PATCH_used  g  gmy  myrust  patch  rme.txt  rustfmt.toml
rust/05_sandbox/diff/both_as_diff_patch_replacements/src/: main.rs
rust/05_sandbox/diff/diff/: Cargo.toml  empty.patch  g  g_empty  good_way.patch  le.patch  workspace.rs.PATCHED  workspace.rs.PATCHED_real  workspace.rs.original_real
rust/05_sandbox/diff/diff/WIP_diffy_patch/: diff_poc_stronger_assurances.patch  diffy_1.patch  diffy_poc.patch
rust/05_sandbox/diff/diff/src/: main.rs
rust/05_sandbox/tikv_playproject1/: Cargo.toml
rust/05_sandbox/workout/: .gitignore  Cargo.toml  cursive_fix.patch  ncurses-rs_fix.patch  pull_deps
rust/debug_assertions/: Cargo.toml  e  go
rust/debug_assertions/src/: main.rs
rust/unused_manifest_key/: 1500_error_on_unused_manifest_key.patch  Cargo.toml
rust/workspace_buildrs2/buildrs_not_updated/: Cargo.toml  README  build.rs  go
rust/workspace_buildrs3/: Cargo.toml
rust/workspace_buildrs3/helper_scripts/: c
rust/workspace_buildrs3/recompile_self/: 1000_need_this_env_var.patch  Cargo.toml  build.rs  eb
rust/workspace_buildrs3/recompile_self/src/: main.rs
rust/writing_an_OS_in_Rust/blog_os/: Cargo.toml  ec  go  x86_64-blog_os.json
rust/writing_an_OS_in_Rust/blog_os/.cargo/: config.toml
rust/writing_an_OS_in_Rust/blog_os/src/: main.rs
rustlearnage/: README.md
segfault/: iSEh.c
selectt/: Cargo.toml
shell/: rme.txt
three/: go
usize/: Cargo.toml  FIXME  go_32bit  go_64bit  prereq
workout/: Cargo.toml
(+1890 files in other folders)
