[package]
name = "bad_Z"
version = "0.1.0"
authors = ["howaboutsynergy <howaboutsynergy@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
bad = []

[build]
rustflags = [ "-Z", "treat-err-as-bug=4000" ]  #no effect, https://github.com/rust-lang/cargo/issues/6338
