[package]
name = "l_20_1_hello"
version = "0.1.0"
authors = ["howaboutsynergy <howaboutsynergy@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#XXX: name of the executable (previously: 'main', now: 'l_20_1_hello_executable' so I can more easily pgrep/pkill it)
[[bin]]
name = "l_20_1_hello_executable"
path= "src/bin/main.rs"

[dependencies]
#ctrlc = "3"
signal-hook = { version = "0.1.9", features = [ "mio-support" ] }
#/*, "tokio-support" */] }
mio = "0.6.19"


[features]
sleepindrop = []
sleepbeforeexitmain = []
