[package]
name = "async_futures_try_join"
version = "0.1.0"
authors = ["howaboutsynergy <howaboutsynergy@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# The latest version of the "futures" library, which has lots of utilities
# for writing async code. Enable the "compat" feature to include the
# functions for using futures 0.3 and async/await with the Hyper library,
# which use futures 0.1.
#futures-preview = { version = "=0.3.0-alpha.19", features = ["compat"] }
futures-preview = { version = "=0.3.0-alpha.17", features = ["async-await", "nightly"] }
#futures = { version = "=0.1.27" }
futures-timer = "0.3"
