[package]
name = "three"
version = "0.1.0"
authors = ["offline <offline@Z575>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#mpi = { git = "https://github.com/bsteinb/rsmpi", rev = "f9aec8b8d82" }
mpi = { git = "https://github.com/rsmpi/rsmpi", rev = "98d3a8bb65f4ad985ea7f2ee7b5f4df2ea66cfcd" }
