[package]
name = "new_rust_project"
version = "0.1.0"
authors = [""]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-preview = { version = "0.3.0-alpha.18", features = ["compat", "async-await", "nightly"] }
tikv-client = { path = "/home/user/build/2nonpkgs/rust.stuff/client-rust" }
clap = "2.32"                                                                                                                                       
runtime = { version = "0.3.0-alpha.7", default-features = false }
runtime-tokio = "0.3.0-alpha.6"
