[package]
name = "grrs"
version = "0.1.0"
authors = [ "CEhowNSaboutORsynergyED" ]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.2.10"
failure = "0.1.5"
exitfailure = "0.5.1"
ctrlc = "3"

[dev-dependencies]
assert_cmd = "0.10"
predicates = "1"
tempfile = "3"
