[package]
name = "sighooksample1"
version = "0.1.0"
authors = ["howaboutsynergy <howaboutsynergy@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#signal-hook = { version = "0.1.9" , features = [ "mio-support" ] }  # 100% cpu usage
#signal-hook = { version = "0.1.9" , features = [ ], optional = false } # no cpu usage!
#, path = '/tmp/signal-hook'
libc = "0.2.59"

#https://doc.rust-lang.org/cargo/reference/manifest.html#the-features-section
#another way to specify this line: signal-hook = { version = "0.1.9" , features = [ ], optional = false } # no cpu usage!
[dependencies.signal-hook]
version = "0.1.9"
optional = false
default-features = false # do not include the default features, and optionally
                         # cherry-pick individual features:
features = [ ]

[features]
# Features can be used to reexport features of other packages. The `session`
# feature of package `awesome` will ensure that the `session` feature of the
# package `cookie` is also enabled.
#session = ["cookie/session"]
#src: https://doc.rust-lang.org/cargo/reference/manifest.html#the-features-section
default = [] #just being explicit about it.
infiniteloop = [ "signal-hook/mio-support" ] #ie. cargo run -v --no-default-features --features "infiniteloop" -- "$@"
#^ https://github.com/vorner/signal-hook/issues/16  (fixed in #17 as signal-hook 0.1.10)

