[package]
name = "abort_hook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[lib]
#name = "custom_abort" #makes it a .rlib but that already happens anyway
#path = "src/lib.rs"

#[[bin]]
#name = "main"
#path = "src/main.rs"  # Path to your main binary source file

#[build]
#"cargo:rustc-link-lib" = "custom_abort"

[profile.dev]
opt-level = 0
#rpath=true #This sets the rpath for the linker, instructing it to search for libraries relative to the executable's location. However, this might not work reliably across all platforms.

#[build]
#rustc-link-args = ["-Wl,--no-as-needed"]


[dependencies]
libc = "0.2"
#std = { path = "/usr/lib/rust/1.76.0/lib/rustlib/src/rust/library/std" }
#^ this doesn't work, but -Z build-std does (tho it needs --target, see ./g2)
