[package]
name = "cache_incoherence2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
lto=true
opt-level=3
panic="unwind"
codegen-units = 1
debug=true
debug-assertions=true

[dependencies]
libc = "0.2"
lazy_static = "1.4.0"
ctrlc = "3.3.0"
