[package]
name = "feature_means_all"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
one=[]
two=[]
ideally-excluded-from-all=[] #would like cargo build --all-features to NOT include this one!
used-all-features-detector=[] #workaround, if this is enabled, likely --all-features was used!
