[package]
name = "cursive_nul_in_text"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cursive = { path ="/home/user/1tmp/ncurses_things/cursive/cursive" }
#cursive = { path ="/tmp/cursive/cursive" }
