[package]
name = "custom_dbus_polkitd"
version = "0.1.0"
edition = "2021"

# Exclude the specified subdirectory
exclude = ["root_drive"]

[dependencies]
zbus = "4.3.0"
tokio = { version = "1.38.0", features = ["full"] }
#async-std = { version = "1.10", features = ["attributes"] }  # async runtime

[profile.dev]
opt-level=3
debug=2
debug-assertions=true
overflow-checks = true
lto = "thin"
panic= "unwind"

