[package]
name = "both_as_diff_patch_replacements"
version = "0.1.0"
edition = "2021"

[dependencies]
#uncomment this for bad way:
#diffy = { version="0.4.0" }
#uncomment this for p.o.c. good way:
#diffy = { version="0.4.0", path="/home/user/1tmp/diffy/" }
# same as ^ but on github:
diffy = { version="0.4.0", git="https://github.com/correabuscar/diffy", branch="unambiguous" }
getopts = { version="0.2.21", git="https://github.com/correabuscar/getopts", branch="used_by_me" }
#getopts = { version="0.2.21", path="/home/user/1tmp/getopts/" }
chrono = "0.4.38"


[profile.dev]
opt-level = 0
debug = true
lto=false
split-debuginfo = "uncompressed"
debug-assertions = true
overflow-checks = true


[profile.release]
opt-level = 3
lto="thin"
debug = true
split-debuginfo = "uncompressed"
debug-assertions = true
overflow-checks = true


