[package]
name = "diff"
version = "0.1.0"
edition = "2021"

exclude = [ "./empty.patch", "./workspace.rs*", "./le.patch", "./WIP_diffy_patch" ]

[dependencies]
#uncomment this for bad way:
diffy = { version="0.4.0" }
#uncomment this for p.o.c. good way:
#diffy = { version="0.4.0", path="/home/user/1tmp/diffy/" }
